--- a/source/TODO.txt
+++ b/source/TODO.txt
@@ -1,6 +1,13 @@
+[ NOTES FOR DAN ]
+
+* account_details: all keys inside are optional, as well as inside
+* don't require E.164 format for phone numbers
+* your examples of "US" state is wrong
+* renamed fields (source->src, transaction->txn, source->src, address->addr, referer->ref, ...)
+* rename address_line_1 to line1 etc
+
 [ TO COMPLETE ]
 
-* txn-event-notify
 * initiate-sell
 * transports
 * txn-flow-sell
@@ -9,11 +16,14 @@
 
 [ MUST ]
 
+* fill in missing details in "Transpots" sections of all pages
 * check for typos
 * check for style
 
 [ BETTER API ]
 
+* add refund_crypto_addr to sell-crypto
+* maybe WE should be the ones creating the txn_id, and simply ask them for their number as well?
 * same URL for GET and POST in REST? Needs auth change
 * allow client-only in REST? In JWT? ==> requires _msg to be part of payload as well
 * maybe WE create the the uuid of the xo?
@@ -21,11 +31,18 @@
 
 [ BETTER DOC ]
 
+* "address"/"Address" --> "addr"/"Addr"
+* "source" --> "src"
+* "destination" --> "dst"
+* "referrer"/"referer" --> "ref"
+* rename types to CamelCase, to diff from param names
+* incorporate (TM), "Grog" and "Leather Jackets" jokes
 * uniformity in "_id" and "_uuid"
 * add "roles" in "concepts", and thus simplify the text is some API messages documentation
 * uniformity in "message" / "call" / "endpoint" / "method" / with-or-without "API" / "api"
 * find a way to explain "currency of cryptocurrency"; maybe "currency of crypto coins" or "... of crypto money"?
 * find a way to diffrentiate between a "Simplex txn" and a "Blockchain txn" (for e.g. send-crypto)
+* find a name for "wallet app / exchange / affiliate / etc."
 * change H2 in API chapters to h3, so they don't show up in TOC
 * uniformity in "crypto currency" or "... cryptocurrencies" or "crypto currencies"
 * fixed-font (``) for "API_STRINGS"
