--- a/source/TODO.txt
+++ b/source/TODO.txt
@@ -5,6 +5,7 @@
 * your examples of "US" state is wrong
 * renamed fields (source->src, transaction->txn, source->src, address->addr, referer->ref, ...)
 * rename address_line_1 to line1 etc
+* refund_addr
 
 [ TO COMPLETE ]
 
@@ -22,12 +23,8 @@
 
 [ BETTER API ]
 
-* add "refund_crypto_addr"
-* add "phone country" to type "phone"
-* maybe WE should create the uuid for the txn? OR: prepend the partner id to the txn_id.
-* maybe WE create the the uuid of the xo?
-* add refund_crypto_addr to sell-crypto
 * maybe WE should be the ones creating the txn_id, and simply ask them for their number as well?
+* maybe WE create the the uuid of the xo?
 * same URL for GET and POST in REST? Needs auth change
 * allow client-only in REST? In JWT? ==> requires _msg to be part of payload as well
 * add "serial_num" to payload of notifications (send-coins, txn-event-notify), or even to all, so client can re-order
@@ -36,7 +33,6 @@
 
 * param table:
   * move "required" column to be an added word in the 1st col descr
-  * only write "required", not "optional" (which will be the default)
 * "address"/"Address" --> "addr"/"Addr"
 * "source" --> "src"
 * "destination" --> "dst"
