--- a/source/TODO.txt
+++ b/source/TODO.txt
@@ -1,10 +1,12 @@
 [ TO COMPLETE ]
 
+* concepts
 * transports
 * txn-flow-sell
 
 * initiate-sell params
 * fill in missing details in "Transpots" sections of all pages
+
 * check for typos
 * check for style
 
