--- a/TODO.txt
+++ b/TODO.txt
@@ -6,15 +6,7 @@
 [ P2 ]
 
 * add screenshots/illustrations to "sell-txn-flow"
-* fix "sep" then re-add
-
-[ NOTES FOR DAN ]
-
-* account_details: all keys inside are optional, as well as inside
-* don't require E.164 format for phone numbers
-* your examples of "US" state is wrong
-* renamed fields (source->src, transaction->txn, source->src, address->addr, referer->ref, ...)
-* added refund_crypto_addr
+* incorporate (TM), "Grog" and "Leather Jackets" jokes
 
 [ BETTER API ]
 
@@ -27,49 +19,47 @@
 * transport: make same URL for GET and POST in REST; ==> will require auth change
 * transport: allow client-only integrations in REST? In JWT? ==> requires _msg to be part of payload as well, so that it's signed
 
-[ BETTER DOC ]
+[ BETTER DOC -- CONTENT ]
 
 * add actual Transport examples to each API
 * more API's
-* complete "roles" then re-add
+* add "roles"
 * diff "intro" and "flow" for kyc_broker, lqp, lqr
     * they need to include flow of only events that matter to them
     * they need to include notifications
     * they need to include settlement
-
+* write "intro sell for lqr", "intro sell for kyc", "intro buy", "txn flow buy"
 * add "FAQ" section
 * add diagram to "flow" section
 
-* disable "JSON" examples bar, move examples to main body of text
+[ BETTER DOC -- CONTENT ]
 
-* param table:
-  * move "required" column to be an added word in the 1st col descr
-* "address"/"Address" --> "addr"/"Addr"
-* "source" --> "src"
-* "destination" --> "dst"
-* "referrer"/"referer" --> "ref"
-* rename types to CamelCase, to diff from param names
+* Shorten names:
+	* "address"/"Address" --> "addr"/"Addr"
+	* "source" --> "src"
+	* "destination" --> "dst"
+	* "referrer"/"referer" --> "ref"
+	* "end-users" ==> "users" where possible
+
+[ BETTER DOC -- EASY READ ]
+
+* backtick around all type names and around all parameter names and all api names
 * incorporate (TM), "Grog" and "Leather Jackets" jokes
-* uniformity in "_id" and "_uuid"
-* uniformity in "message" / "call" / "endpoint" / "method" / with-or-without "API" / "api"
+* find a name for "wallet app / exchange / affiliate / etc."
+* change to active, rather than passive, voice
 * find a way to explain "currency of cryptocurrency"; maybe "currency of crypto coins" or "... of crypto money"?
 * find a way to diffrentiate between a "Simplex txn" and a "Blockchain txn" (for e.g. send-crypto)
-* find a name for "wallet app / exchange / affiliate / etc."
-* change H2 in API chapters to h3, so they don't show up in TOC
-* uniformity in "crypto currency" or "... cryptocurrencies" or "crypto currencies"
-* fixed-font (``) for "API_STRINGS"
-* add internal links
 
-* change to active, rather than passive, voice
-* "end-users" ==> "users" where possible
-* backtick around all type names and around all parameter names and all api names
+[ BETTER DOC -- NAVIGATION ]
+
+* add internal links
+* change H2 in API chapters to h3, so they don't show up in TOC
 
 [ PREETIFY ]
 
-* add diagrams in "flow"
-* add screenshots to "sell flow"
-* examples should be inline, not on rhs
+* disable "JSON" examples bar, move examples to main body of text
 * "Required" --> bg-color: hsl(39,88%, 59%); text-shadown 0 1px rgba(0, 0, 0, 0.2)
+* move "required" column to be an added word in the 1st col descr
 
 [ BETTER DOC INFRA ]
 
@@ -78,7 +68,6 @@
 * markdown support for generating "required"
 * markdown support for "comment" spans (for "optional, string" e.g.)
 * support for pre-processing "macros" (BASE_URL, e.g.)
-* support TOC with section breaks
 * configurable theme
     * syntax highlighting theme
     * base colors only, all the rest with hsl functions in scss
@@ -104,4 +93,11 @@
     * special considerations when writing documentation in the page -- what we want to tell, what we want to promise, etc.
 * define the product types are "Buy", "Sell", and consider "Withdrawal" as possible next
 * define the customer types as "KYC vendor", "Wallet / Exchange", "LQP", "LQR", "Affiliate"
-* write "intro sell for lqr", "intro sell for kyc", "intro buy", "txn flow buy"
+
+[ NOTES FOR DAN ]
+
+* account_details: all keys inside are optional, as well as inside
+* don't require E.164 format for phone numbers
+* your examples of "US" state is wrong
+* renamed fields (source->src, transaction->txn, source->src, address->addr, referer->ref, ...)
+* added refund_crypto_addr
