--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,8 @@
 
 [ BETTER API ]
 
+* rename "send-crypto" (and associated msgs) to "xo"
+* unify get-quote and get-quote-lq
 * we should be the ones creating the txn_id, and possibly ask them for their number as well?
 * we should be the ones creating the xo_id; we should ask for their number in the response, as optional convenience for them.
 * add "serial_num" to payload of notifications (send-coins, txn-event-notify), or even to all, so client can re-order
